<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/playerA" />

            <TextView
                android:id="@+id/player_a_score"
                style="@style/TextScore"
                android:layout_marginBottom="@dimen/margin"
                android:text="0" />

            <Button
                style="@style/ButtonMove"
                android:onClick="countAR"
                android:text="@string/rock" />

            <Button
                style="@style/ButtonMove"
                android:onClick="countAP"
                android:text="@string/paper" />

            <Button
                style="@style/ButtonMove"
                android:onClick="countAS"
                android:text="@string/scissors" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/playerB" />

            <TextView
                android:id="@+id/player_b_score"
                style="@style/TextScore"
                android:layout_marginBottom="@dimen/margin"
                android:text="0" />

            <Button
                style="@style/ButtonMove"
                android:onClick="countBR"
                android:text="@string/rock" />

            <Button
                style="@style/ButtonMove"
                android:onClick="countBP"
                android:text="@string/paper" />

            <Button
                style="@style/ButtonMove"
                android:onClick="countBS"
                android:text="@string/scissors" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin"
        android:onClick="scoreReset"
        android:text="@string/reset" />
</RelativeLayout>

